<resources>
    <string name="app_name">VolajiciInfo</string>

    <string name="info_notification_title_template">Volá: %1$s</string>
    <string name="last_update_template">Poslední aktualizace: %1$s</string>
    <string name="number_of_people_template">Počet dat: %1$s</string>


    <string name="last_update_default">nikdy</string>
    <string name="url_default">https://www.tondakozak.cz/testy/callerinfo/</string>

    <!-- TODO: remove this placeholder text -->
    <string name="info_notification_placeholder_text_template">Info: %1$s
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="channel_id">22222</string>
    <string name="shared_pref_min_latency">minLatency</string>
    <string name="shared_pref_last_update">lastUpdate</string>
    <string name="shared_pref_url">dataUrl</string>
    <string name="shared_pref_launch_on_start">launchOnStart</string>
    <string name="shared_pref_on_background">onBackground</string>
    <string name="shared_pref_auto_hide_dialog">autoHideDialog</string>
    <string name="shared_pref_auto_hide_dialog_delay">autoHideDialogDelay</string>
    <string name="shared_pref_number_not_found">numberNotFound</string>
    <string name="shared_pref_send_data">sendData</string>
    <string name="shared_pref_dialog_alpha">dialogAlpha</string>
    <string name="shared_pref_hide_dialog_title">hideDialogName</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message
        history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="receiverReload">reloadMainActivity</string>
    <string name="smazat_data">Smazat data</string>
    <string name="update_data">Aktualizovat data</string>
    <string name="updates_frequency">Interval aktualizací:</string>
    <string name="hours">hodin</string>
    <string name="edit">Upravit</string>
    <string name="data_url">Zdroj dat URL</string>
    <string name="json_wrong_format">VolajiciInfo: JSON má špatný formát</string>
    <string name="update_problem">VolajiciInfo: problém s aktualizací</string>
    <string name="change_protocol">VolajiciInfo: změna https na http</string>
    <string name="page_not_found">VolajiciInfo: Adresa neexistuje, zkontrolujte url pro aktualizace</string>
    <string name="zapnout_pri_startu">Zapnout při spuštění systému</string>
    <string name="povolit_beh_na_pozadi">Povolit běh na pozadí</string>
    <string name="data_a_aktualizace">Data a aktualizace</string>
    <string name="nezobrazit_dialog">Nezobrazovat dialog</string>
    <string name="hlaska_nenalezeno">Hláška: Číslo nenalezeno</string>
    <string name="cislo_nenalezeno">Číslo nenalezeno</string>
    <string name="automaticky_skryvat_dialog">Automaticky skrývat dialog</string>
    <string name="chovani_aplikace">Chování aplikace</string>
    <string name="seconds">Sekund</string>
    <string name="delay">Prodleva:</string>
    <string name="beh_systemu">Běh aplikace na pozadí</string>
    <string name="search_tel_number">Hledat telefonní číslo</string>
    <string name="send_diagnostic_data">Povolit odesílání diagnostických dat</string>
    <string name="better_development">Usnadnění vývoje</string>
    <string name="dialog_appearence">Vzhled dialogu</string>
    <string name="hide_dialog_name">Skrýt název aplikace</string>
    <string name="dialog_alpha">Průhlednost dialogu</string>
    <string name="transparent">Průhledné</string>
    <string name="not_transparent">Neprůhledné</string>
</resources>
